--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -23,7 +23,7 @@ jobs:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      actions: write # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
     runs-on: ubuntu-latest
 
@@ -73,13 +73,14 @@ jobs:
         else
           echo "status=success" >> $GITHUB_ENV
         fi
+        
     - name: Add Comment and Block PR
       if: env.status == 'block'
       run: |
         gh pr comment ${{ github.event.pull_request.number }} --body 'Block'
         gh pr close ${{ github.event.pull_request.number }}
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GIT_PAT }}
 
     - name: Add Comment and Merge PR
       if: env.status == 'success'
@@ -87,4 +88,4 @@ jobs:
         gh pr comment ${{ github.event.pull_request.number }} --body 'Successful'
         gh pr merge ${{ github.event.pull_request.number }} --merge
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GIT_PAT }}
